; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/systat/extr_vmstat.c_copyinfo.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/systat/extr_vmstat.c_copyinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Info = type { i64* }

@nintr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Info*, %struct.Info*)* @copyinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copyinfo(%struct.Info* %0, %struct.Info* %1) #0 {
  %3 = alloca %struct.Info*, align 8
  %4 = alloca %struct.Info*, align 8
  %5 = alloca i64*, align 8
  store %struct.Info* %0, %struct.Info** %3, align 8
  store %struct.Info* %1, %struct.Info** %4, align 8
  %6 = load %struct.Info*, %struct.Info** %4, align 8
  %7 = getelementptr inbounds %struct.Info, %struct.Info* %6, i32 0, i32 0
  %8 = load i64*, i64** %7, align 8
  store i64* %8, i64** %5, align 8
  %9 = load %struct.Info*, %struct.Info** %4, align 8
  %10 = load %struct.Info*, %struct.Info** %3, align 8
  %11 = bitcast %struct.Info* %9 to i8*
  %12 = bitcast %struct.Info* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %11, i8* align 8 %12, i64 8, i1 false)
  %13 = load %struct.Info*, %struct.Info** %3, align 8
  %14 = getelementptr inbounds %struct.Info, %struct.Info* %13, i32 0, i32 0
  %15 = load i64*, i64** %14, align 8
  %16 = load i64*, i64** %5, align 8
  %17 = load %struct.Info*, %struct.Info** %4, align 8
  %18 = getelementptr inbounds %struct.Info, %struct.Info* %17, i32 0, i32 0
  store i64* %16, i64** %18, align 8
  %19 = load i32, i32* @nintr, align 4
  %20 = sext i32 %19 to i64
  %21 = mul i64 %20, 4
  %22 = trunc i64 %21 to i32
  %23 = call i32 @bcopy(i64* %15, i64* %16, i32 %22)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @bcopy(i64*, i64*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
